# Python_db_alchemy

EX-10/: my_select.py  mynotes.db  pyproject.toml  seed.py
EX-10/alembic/: env.py
EX-10/alembic/versions/: 48e54fc1d03e_init.py
EX-10/db/: connect_db.py  models.py
EX-10/seeds/: disciplines.py  grades.py  groups.py  students.py  teachers.py
